examples/codegen/tuples.an
foo (a, (b: t), _) {Print t} =
    _: String = a
    print b

main () =
    foo ("test", 2, 'c')
    foo ("hi", 7, 2.0, 3, 4, 5)

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/tuples.an:7:5
// 6 |     foo ("test", 2, 'c')
//   |     // error: Ambiguous implicit of type Print _ required by foo, type annotation required
// 7 |     foo ("hi", 7, 2.0, 3, 4, 5)
//   |     ^^^
// 
// examples/codegen/tuples.an:7:10
// 6 |     foo ("test", 2, 'c')
// 7 |     foo ("hi", 7, 2.0, 3, 4, 5)	// error: Expected String, _ but found String
//   |          ^^^^
// 
// Found 2 errors and 0 warnings

